# nodeeditor

./: .clang-format  .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.hpp  DivisionModel.hpp  MathOperationDataModel.hpp  MultiplicationModel.hpp  NumberDisplayDataModel.hpp  NumberSourceDataModel.cpp  NumberSourceDataModel.hpp  SubtractionModel.hpp  main.cpp
examples/connection_colors/: main.cpp  models.hpp
examples/dynamic_ports/: DynamicPortsModel.cpp  DynamicPortsModel.hpp  PortAddRemoveWidget.hpp  main.cpp
examples/lock_nodes_and_connections/: DelegateNodeModel.hpp  main.cpp
examples/plugin_text/: CMakeLists.txt  PluginDefinition.hpp  TextModel.cpp  TextModel.hpp
examples/plugins_load/: CMakeLists.txt  PluginsManagerDlg.cpp  PluginsManagerDlg.hpp  main.cpp
examples/resizable_images/: ImageLoaderModel.cpp  ImageLoaderModel.hpp  ImageShowModel.cpp  ImageShowModel.hpp  main.cpp
examples/simple_graph_model/: SimpleGraphModel.cpp  main.cpp  (+1 more)
src/: AbstractNodeGeometry.cpp  BasicGraphicsScene.cpp  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionPainter.hpp  ConnectionState.cpp  ConnectionStyle.cpp  DataFlowGraphModel.cpp  DataFlowGraphicsScene.cpp  DefaultConnectionPainter.cpp  DefaultHorizontalNodeGeometry.cpp  DefaultNodePainter.cpp  DefaultVerticalNodeGeometry.cpp  GraphicsView.cpp  GraphicsViewStyle.cpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeDelegateModel.cpp  NodeGraphicsObject.cpp  NodeStyle.cpp  PluginsManager.cpp  UndoCommands.cpp  UndoCommands.hpp  locateNode.cpp
(+38 files in other folders)
